--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
     </section>
  <footer id="footer"> 
-        <p><span>Copyright &copy; 2024 All rights reserved | designed by</span>  <b>
+        <p><span>Copyright &copy; 2024 All rights reserved | designed by</span>  <br>
 <a href="https://github.com/" target="_blank">Anas ahmed-fathy </a> 
                       
     </footer>
